# RaftimeDB

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/commands/: cluster.md  debug.md  deploy.md  production-deploy.md  scaffold-module.md  scale.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: api.rs  config.rs  main.rs  metrics.rs
crates/proxy/src/raft/: log_store.rs  mod.rs  network.rs  persistent_log_store.rs  state_machine.rs  types.rs
crates/proxy/src/router/: mod.rs
crates/proxy/src/websocket/: handler.rs  mod.rs  upstream.rs
crates/proxy/tests/: proxy_integration.rs
deploy/docker/: Dockerfile  docker-compose.yml
deploy/helm/rafttimedb/: Chart.yaml  values.yaml
deploy/k3s/: rafttimedb-test.yaml  rafttimedb.yaml
scripts/: publish-all.sh
tests/e2e/: README.md  docker_cluster_test.sh
