[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/YOUR_ORG/RaftTimeDB"
description = "Distributed, fault-tolerant clustering layer for SpacetimeDB"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.26"

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Byte buffers (zero-copy)
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# HTTP server
axum = { version = "0.8", features = ["json"] }

# Metrics
# prometheus = "0.13"  # TODO: enable when metrics are implemented

[profile.release]
lto = true
codegen-units = 1
strip = true
