[package]
name = "rafttimedb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for managing RaftTimeDB clusters"

[[bin]]
name = "rtdb"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
openraft.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
